fix: fulltext add: performance improved